--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-server.port=8067
+server.port=8069
 spring.application.name=uitools
+
+spring.datasource.url=jdbc:mysql://124.239.180.26:3306/uitools?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=sino@123.com
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
