uitools查询模板列表

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=8069
+server.port=8068
 spring.application.name=uitools
 
 spring.datasource.url=jdbc:mysql://124.239.180.26:3306/uitools?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=sino@123.com
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+mybatis.mapper-locations=classpath*:bigdata/uitools/dao/**/mapping/*.xml
+mybatis.configuration.log-impl= org.apache.ibatis.logging.stdout.StdOutImpl
