--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>bigdata.uitools</groupId>
-	<artifactId>bigdata_uitools</artifactId>
+	<groupId>bigdata</groupId>
+	<artifactId>uitools</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>bigdata.uitools</name>
-	<description>uitools project for Spring Boot</description>
+	<name>uitools</name>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -92,21 +92,25 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>smartone.bigdata</groupId>
 			<artifactId>smartone-bigdata-utils</artifactId>
 			<version>1.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>smartone.bigdata</groupId>
 			<artifactId>smartone-bigdata-utils</artifactId>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -127,8 +131,8 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
 				<configuration>
-					<destDir>bigdata.flow</destDir>
-					<subpackages>bigdata.flow.controller</subpackages>
+					<destDir>com.bigdata.demo</destDir>
+					<subpackages>com.bigdata.demo.controller</subpackages>
 				</configuration>
 			</plugin>
 
